--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root{
+    --primary : #f50;
+}
+
 *{
     padding: 0px;
     margin: 0px;
@@ -7,7 +11,7 @@
 body{
     width: 100vw;
     height: 100vh;
-    background-image: linear-gradient(58deg, #212121 5%, #f50 5% 15%, #212121 15% 20%, #fff 20% 85%, #f50 85% 90%, #212121 90% 100%);
+    background-image: linear-gradient(58deg, #212121 5%, var(--primary) 5% 15%, #212121 15% 20%, #fff 20% 85%, var(--primary) 85% 90%, #212121 90% 100%);
 }
 
 .img-back{
@@ -16,7 +20,7 @@ body{
     width: 25rem;
     height: 25rem;
     background-color: red;
-    background-image: linear-gradient(90deg,#f50 50%, #212121 50% 100%);
+    background-image: linear-gradient(90deg,var(--primary) 50%, #212121 50% 100%);
     border-radius: 50%;
     padding: 1rem;
     position: absolute;
@@ -75,7 +79,7 @@ body{
 }
 
 .modal-button{
-    background-color: #f50;
+    background-color: var(--primary);
     height: 3rem;
     width: 5rem;
     border-radius: 0.5rem;
@@ -120,6 +124,6 @@ body{
 
 #save{
     height: 2rem;
-    background-color: #f50;
+    background-color: var(--primary);
     border-radius: 0.5rem;
 }
